syntax = "proto3";

package paymentpb;

option go_package = "freelanceX_invoice.payment_service/proto/payment;paymentpb";

service PaymentService {
  rpc CreatePaymentOrder(CreatePaymentOrderRequest) returns (CreatePaymentOrderResponse);
}

message CreatePaymentOrderRequest {
  string invoice_id = 1;
  string milestone_id = 2;
  string payer_id = 3;
  string receiver_id = 4;
  double amount = 5;
}

message CreatePaymentOrderResponse {
  string payment_id = 1;
  string razorpay_order_id = 2;
  double amount = 3;
  string currency = 4;
  string invoice_id = 5;
}
